@@ -2,8 +2,9 @@
 
 const ACL = require('acl');
 
-const constants = require('./constants');
-const dbConn    = require('./db_conn');
+const constants    = require('./constants');
+const dbConn       = require('./db_conn');
+const sentry_utils = require('./sentry_utils');
 
 // if (opts.get('acls')) {
 let p_acl = dbConn.p_db.then((db) => {
@@ -25,7 +26,8 @@ let aclMiddleware = (resource, actions) => {
         return next(err);
       }
       p_acl.then((acl) => {
-        acl.isAllowed(user, resource, actions, (err, acl_result) => {
+        let resourceName = sentry_utils.formatResourceNameForACL(resource);
+        acl.isAllowed(user, resourceName, actions, (err, acl_result) => {
           if ( err ) {
             next(err);
           } else if ( acl_result ) {
