@@ -11,7 +11,7 @@ const sentryUtils = require('./sentry_utils');
 module.exports.setup = function( app ) {
 
   app.post('/admin/user/:username/createToken',
-    acl_mid('/admin', constants.ACL_ACTION_POST),
+    acl_mid(constants.ADMIN_RESOURCE, constants.ACL_ACTION_POST),
     function(req, res, next) {
       let user = req.headers[constants.USER_ID_HEADER];
       let targetUser = req.params.username;
@@ -27,7 +27,7 @@ module.exports.setup = function( app ) {
   );
 
   app.post('/admin/user/:username/revokeToken',
-    acl_mid('/admin', constants.ACL_ACTION_POST),
+    acl_mid(constants.ADMIN_RESOURCE, constants.ACL_ACTION_POST),
     function(req, res, next) {
       let user = req.headers[constants.USER_ID_HEADER];
       let targetUser = req.params.username;
@@ -50,7 +50,7 @@ module.exports.setup = function( app ) {
   );
 
   app.get('/admin/user/:username/listTokens',
-    acl_mid('/admin', constants.ACL_ACTION_VIEW),
+    acl_mid(constants.ADMIN_RESOURCE, constants.ACL_ACTION_VIEW),
     function(req, res, next) {
       let targetUser = req.params.username;
 
@@ -63,14 +63,14 @@ module.exports.setup = function( app ) {
   // this is a resource, so should have a trailing slash
   // (this allows relative urls to work)
   app.get('/admin/user/:username',
-    acl_mid('/admin', constants.ACL_ACTION_VIEW),
+    acl_mid(constants.ADMIN_RESOURCE, constants.ACL_ACTION_VIEW),
     function(req, res) {
       res.redirect(`/admin/user/${req.params.username}/`);
     }
   );
 
   app.get('/admin/user/:username/',
-    acl_mid('/admin', constants.ACL_ACTION_VIEW),
+    acl_mid(constants.ADMIN_RESOURCE, constants.ACL_ACTION_VIEW),
     function(req, res) {
       res.status(200).render(path.join(__dirname, '../sentry/views', 'admin'), {
         user: req.params.username,
@@ -80,7 +80,7 @@ module.exports.setup = function( app ) {
   );
 
   app.put('/admin/manage/addAdmin',
-    acl_mid('/admin', constants.ACL_ACTION_POST),
+    acl_mid(constants.ADMIN_RESOURCE, constants.ACL_ACTION_POST),
     function(req, res, next) {
       let user;
       try {
@@ -101,7 +101,7 @@ module.exports.setup = function( app ) {
   );
 
   app.put('/admin/manage/removeAdmin',
-    acl_mid('/admin', constants.ACL_ACTION_POST),
+    acl_mid(constants.ADMIN_RESOURCE, constants.ACL_ACTION_POST),
     function(req, res, next) {
       let user = req.headers[constants.USER_ID_HEADER];
       let targetUser;
@@ -129,14 +129,14 @@ module.exports.setup = function( app ) {
   );
 
   app.get('/admin/manage',
-    acl_mid('/admin', constants.ACL_ACTION_VIEW),
+    acl_mid(constants.ADMIN_RESOURCE, constants.ACL_ACTION_VIEW),
     function(req, res) {
       res.redirect('/admin/manage/');
     }
   );
 
   app.get('/admin/manage/',
-    acl_mid('/admin', constants.ACL_ACTION_VIEW),
+    acl_mid(constants.ADMIN_RESOURCE, constants.ACL_ACTION_VIEW),
     function(req, res) {
       let user = req.headers[constants.USER_ID_HEADER];
       // logger.info('admin page for ', user);
@@ -154,14 +154,14 @@ module.exports.setup = function( app ) {
   // this is a resource, so should have a trailing slash
   // (this allows relative urls to work)
   app.get('/admin',
-    acl_mid('/admin', constants.ACL_ACTION_VIEW),
+    acl_mid(constants.ADMIN_RESOURCE, constants.ACL_ACTION_VIEW),
     function(req, res) {
       res.redirect('/admin/');
     }
   );
 
   app.get('/admin/',
-    acl_mid('/admin', constants.ACL_ACTION_VIEW),
+    acl_mid(constants.ADMIN_RESOURCE, constants.ACL_ACTION_VIEW),
     function(req, res) {
       let user = req.headers[constants.USER_ID_HEADER];
       // logger.info('admin page for ', user);
