@@ -15,6 +15,13 @@ const ACL_ACTION_VIEW        = 'view';
 const ACL_ACTION_POST        = 'post';
 
 /**
+ * Resource name for everything related to administration. Used for ACLs.
+ * @type {String}
+ * @memberof module:lib/constants
+ */
+const ADMIN_RESOURCE = '/admin';
+
+/**
  * HTTP Header where authenticated username is provided.
  * @const
  * @default
@@ -124,7 +131,7 @@ module.exports = {
    * @type {String}
    */
   WEB_TOKEN_CREATION_MSG: messages.WEB_TOKEN.CREATION_MSG,
-  
+
   /**
    * Message to insert into database when a user revokes their token through
    * the web interface.
@@ -138,6 +145,8 @@ module.exports = {
   ACL_ROLE_ADMINISTRATOR,
   ACL_ACTION_VIEW,
   ACL_ACTION_POST,
+
+  ADMIN_RESOURCE,
 
   USER_ID_HEADER,
   TOKEN_OPERATION_CREATE,
