@@ -26,8 +26,14 @@ function readToken(req) {
   }
 }
 
+function formatResourceNameForACL( resourceName ) {
+  assert(typeof resourceName === 'string', `resourceName must be a string`);
+  return decodeURIComponent(resourceName).replace(/[/\s]/g, '_');
+}
+
 module.exports = {
   dispatch,
   dispatchSuccess,
+  formatResourceNameForACL,
   readToken,
 };
